--- a/flower.html
+++ b/flower.html
@@ -30,7 +30,7 @@
                         <span class="say"> </span><br>
                         <span class="say">I'm glad you are open this page, thank you!</span><br>
                         <span class="say">I'm really sorry about that even i still haven't figure it out :/</span><br>
-                        <span class="say">Please tell me what is wrong me, im also get a bit hurt when you suddenly dissapear and didnt say anything.</span><br>
+                        <span class="say">Please tell me what is wrong with me, im also get a bit hurt when you suddenly dissapear and didnt say anything.</span><br>
                         <span class="say"><span class="space"><img src="image/tym.png" alt=""><br>
                         <span class="say">I hope we can get better by time 😊</span>
                         <span >
